Bug 459636 - Report heading shows two years when report period matches calendar year
Summary: Report heading shows two years when report period matches calendar year
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-25 09:51 UTC by Thomas Baumgart
Modified: 2024-12-19 09:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2022-09-25 09:51:36 UTC
In some circumstances, year headings are shown in the form yyyy/yy even though the fiscal year is the calendar year and the start date of the report is Jan 1st.

STEPS TO REPRODUCE
1. Switch fiscal year to start on Jan 1st
2. Start report with all dates selected
3. Change start date to Jan 1st of the second year of data

OBSERVED RESULT
Heading switches from "2002" to "2002/03"

EXPECTED RESULT
Heading should remain "2002"

ADDITIONAL INFORMATION
This may also apply to 5.1 versions
Comment 1 Thomas Baumgart 2022-09-25 09:53:49 UTC
Git commit e156cec1b29b122844e65de8d98b9f6ceedfc9c7 by Thomas Baumgart.
Committed on 25/09/2022 at 09:53.
Pushed by tbaumgart into branch 'master'.

Show single year in report heading if fiscal year equals calendar year

M  +7    -2    kmymoney/plugins/views/reports/core/pivottable.cpp
M  +8    -0    kmymoney/plugins/views/reports/core/pivottable.h

https://invent.kde.org/office/kmymoney/commit/e156cec1b29b122844e65de8d98b9f6ceedfc9c7