Show single year in report heading if fiscal year equals calendar year

BUG: 459636